--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <script>
         let allChannels = [];
         let filteredChannels = [];
-        let selectedLanguage = 'All';
+        let selectedLanguage = 'Tamil';
         let searchQuery = '';
         let deferredPrompt;
 
@@ -566,4 +566,5 @@
         loadChannels();
     </script>
 </body>
+
 </html>
