--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     <script>
 let allChannels = [];
 let filteredChannels = [];
-let selectedLanguage = 'All';
+let selectedLanguage = 'Tamil';
 let searchQuery = '';
 let deferredPrompt;
 
