--- a/index.html
+++ b/index.html
@@ -723,6 +723,8 @@ function updateSearchURL(searchTerm) {
 				navigator.serviceWorker.register('/sw.js')
 				.then(function(registration) {
 					console.log('ServiceWorker registered successfully:', registration.scope);
+					// Force update check
+					registration.update();
 				})
 				.catch(function(error) {
 					console.log('ServiceWorker registration failed:', error);
