--- a/player.html
+++ b/player.html
@@ -1124,6 +1124,21 @@ function toggleFullscreen() {
         hideControlsTimeout = setTimeout(() => {
             hideControls();
         }, 3000);
+		
+		// Register Service Worker for PWA
+		if ('serviceWorker' in navigator) {
+			window.addEventListener('load', function() {
+				navigator.serviceWorker.register('/sw.js')
+				.then(function(registration) {
+					console.log('ServiceWorker registered successfully:', registration.scope);
+					// Force update check
+					registration.update();
+				})
+				.catch(function(error) {
+					console.log('ServiceWorker registration failed:', error);
+				});
+			});
+		}
     </script>
 </body>
 </html>
